# Meta_PyTorch_OpenEnv-Hackathon-x-Scalar-School

./: Dockerfile (1)  README (1).md  README.md  __init__.py  app (5).py  data_generator.py  environment.py  inference.py  issue_detector.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_definitions.py  validate.py
# server/server/server/: __init__.py  server_app (1).py
